[package]
name = "morphz"
version = "0.1.0"
authors = ["Dom Rodriguez <shymega@shymega.org.uk>"]
edition = "2021"
resolver = "2"
readme = "README.md"
publish = false
license = "MIT"
categories = ["embedded", "firmware", "ble"]
keywords = ["embedded", "control", "gui", "cli", "bluetooth", "ble", "earbuds"]
repository = "https://github.com/morph-audio/morphz.git"
description = "GUI/CLI helper app for the Morph InfiniConnect earbuds."
homepage = "https://github.com/morph-audio/morphz"

[dependencies]
serde = { version = "*", features = [ "derive" ] }

[target.'cfg(target_os = "linux")'.dependencies]
bluer = { version = "0.15.0", features = [ "rfcomm" ] }
iced = "0.4.2"
morph-rs = { git = "https://github.com/shymega/morph-rs", features = [ "linux" ] }

[target.'cfg(target_os = "windows")'.dependencies]
iced = "0.4.2"
morph-rs = { git = "https://github.com/shymega/morph-rs", features = [ "windows" ] }

[target.'cfg(target_os = "macos")'.dependencies]
iced = "0.4.2"
morph-rs = { git = "https://github.com/shymega/morph-rs", features = [ "macos" ] }

[profile.dev]
lto = true
opt-level = "z"
codegen-units = 1
debug = true
strip = false

[profile.dev.package."*"]
codegen-units = 1
opt-level = "z"
debug = true

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
debug = false
strip = true

[profile.release.package."*"]
codegen-units = 1
opt-level = "s"
debug = false
